--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/michaelringholm/sports-stats-service#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
 }
